--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
+asgiref==3.8.1
 
+certifi==2024.6.2
+charset-normalizer==3.3.2
 Django==4.2.11
+idna==3.7
 
-
+pillow==10.3.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+requests==2.32.3
+sqlparse==0.5.0
+typing-extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
